--- a/usr/src/cmd/sgs/libelf/demo/README
+++ b/usr/src/cmd/sgs/libelf/demo/README
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2002 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -54,9 +53,9 @@ tpcom.c		threaded print comment:  a threaded version of pcom.c.
 		Demonstrates that libelf is MT-Hot and can be used
 		in a threaded program.
 
-dispsyms.c	print symbols:  scans a ELF file for either
-		a symbol table (either SHT_DYNSYM or SHT_SYMTAB)
-		and displays the symbol tables contents.
+dispsyms.c	print symbols:  scans a ELF file for any symbol tables
+		(SHT_SYMTAB, SHT_DYNSYM, or SHT_SUNW_LDYNSYM) and
+		displays the symbol tables contents.
 
 Makefile	make file to build the above programs.
 
