--- a/usr/src/lib/libbrand/dtd/brand.dtd.1
+++ b/usr/src/lib/libbrand/dtd/brand.dtd.1
@@ -20,7 +20,7 @@
 
  CDDL HEADER END
 
- Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+ Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
  Use is subject to license terms.
 
  ident	"%Z%%M%	%I%	%E% SMI"
@@ -206,22 +206,30 @@
   privilege
 
     Add a privilege to the default, prohibited, or required set for all
-    zones of this brand.  If a privilege is added to the default set all
-    zones of this brand on the system will inherit this privilege unless
-    the privilege is removed via limitpriv in zonecfg(1m).  If a
-    privilege is added to the prohibited set it can not be added to
-    any zones via limitpriv in zonecfg(1m).  If a privilege is added
-    to the required set then all zones of this brand on the system
-    will inherit this privilege and it can't be removed via limitpriv in
-    zonecfg(1m).
+    zones of this brand with ip-type matched.  If a privilege is added
+    to the default set all zones of this brand with ip-type matched on
+    the system will inherit this privilege unless the privilege is
+    removed via limitpriv in zonecfg(1m).  If a privilege is added to
+    the prohibited set it can not be added to any zones with ip-type
+    matched via limitpriv in zonecfg(1m).  If a privilege is added to
+    the required set then all zones of this brand with ip-type matched
+    on the system will inherit this privilege and it can't be removed via
+    limitpriv in zonecfg(1m).
 
     Its attributes are
       set	The name of the set the privilege should go into.
       name	The name of the privilege.
+      ip-type	Optional, indicates that adding of the privilege to the
+		set only applies to certain IP types. Can be "shared" or
+		"exclusive". If it is not specified, the default value
+		"all" will be used, which means it is applicable regardless
+		the IP type.
+
 -->
 <!ELEMENT privilege	(#PCDATA) >
 <!ATTLIST privilege	set	( default | prohibited | required ) #REQUIRED 
-			name	CDATA #REQUIRED >
+			name	CDATA #REQUIRED
+			ip-type ( shared | exclusive ) "all" >
 
 <!--
   brand
