PSARC 2007/083 ZFS bootable datasets 4929890 ZFS Boot support for the x86 platform 6479807 pools need properties 6531774 reserve bits in directory entry for file type

--- a/usr/src/grub/grub-0.95/AUTHORS
+++ b/usr/src/grub/grub-0.95/AUTHORS
@@ -1,3 +1,8 @@
+
+ZFS support added by Sun Microsystems.
+Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+Use is subject to license terms.
+
 VaX#n8 (real name unknown) wrote shared_src/fsys_ext2fs.c.
 
 Heiko Schroeder rewrote shared_src/stage1.S to be more readable.
