--- a/usr/src/uts/README
+++ b/usr/src/uts/README
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,10 +18,12 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+
+#
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 
 KERNEL MAKEFILE STRUCTURE
 -------------------------
@@ -243,7 +244,7 @@ Adding a New Kernel Module
 
     0]  Create the source files (and directories) as usual.
 
-    1]  Edit uts/*/Makefiles.files to define the set of objects. By convention
+    1]  Edit uts/*/Makefile.files to define the set of objects. By convention
 	the symbolic name of this set is of the form MODULE_OBJS, where
 	MODULE is the module name (i.e.: namefs). The files in each subtree
 	should be defined in the Makefile.files in the root directory of that
@@ -295,17 +296,6 @@ Adding a New Kernel Module
 
 		FS_KMODS	+= fd fifo namefs nfs proc spec ufs
 					   ------
-
-    5]	Add the appropriate components using nsecomp. Continuing with
-	the namefs example:
-
-		$ nsecomp add :src:uts.all:sun4c Comp namefs
-		$ nsecomp add :src:uts.all:sun4c:namefs Targ \
-		  all%/usr/src/uts/sun4c/namefs/Makefile
-
-	This needs to be done for all appropriate "implementation
-	architectures".
-
 Any additional questions can be easily answered by looking at the many
 existing examples.
 
