--- a/usr/src/cmd/fm/dicts/SUN4.po
+++ b/usr/src/cmd/fm/dicts/SUN4.po
@@ -1,5 +1,5 @@
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # CDDL HEADER START
@@ -34,13 +34,13 @@ msgstr "Fault"
 msgid "SUN4-8000-0Y.severity"
 msgstr "Critical"
 msgid "SUN4-8000-0Y.description"
-msgstr "\nA problem was detected in the PCI-Express subsystem.\n  Refer to %s for more information."
+msgstr "A problem was detected in the PCI-Express subsystem.\n  Refer to %s for more information."
 msgid "SUN4-8000-0Y.response"
 msgstr "This fault does not have an automated response agent and thus requires interaction \nfrom the user and/or Sun Services."
 msgid "SUN4-8000-0Y.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-0Y.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
+msgstr "Schedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  If this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
 #
 # code: SUN4-8000-13
 # keys: fault.io.ebus
@@ -56,7 +56,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-13.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-13.action"
-msgstr "\nUse fmdump -v -u EVENT_ID and fmdump -eV -u \nEVENT_ID to collect information to help Sun Service personnel \nidentify the device in need of repair. Schedule a repair procedure to replace \nthe affected device.\n"
+msgstr "Use fmdump -v -u EVENT_ID and fmdump -eV -u \nEVENT_ID to collect information to help Sun Service personnel \nidentify the device in need of repair. Schedule a repair procedure to replace \nthe affected device.\n"
 #
 # code: SUN4-8000-2H
 # keys: fault.io.datapath
@@ -82,13 +82,13 @@ msgstr "Fault"
 msgid "SUN4-8000-3D.severity"
 msgstr "Critical"
 msgid "SUN4-8000-3D.description"
-msgstr "\nA problem was detected in a system core bus.\n  Refer to %s for more information."
+msgstr "A problem was detected in a system core bus.\n  Refer to %s for more information."
 msgid "SUN4-8000-3D.response"
 msgstr "This fault does not have an automated response agent and thus requires interaction \nfrom the user and/or Sun Services."
 msgid "SUN4-8000-3D.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-3D.action"
-msgstr "\nUse fmdump -v -u EVENT_ID and fmdump -eV -u\nEVENT_ID to collect information to \nhelp Sun Service personnel identify the device in need of repair. Schedule \na repair procedure to replace the affected device.\n"
+msgstr "Use fmdump -v -u EVENT_ID and fmdump -eV -u\nEVENT_ID to collect information to \nhelp Sun Service personnel identify the device in need of repair. Schedule \na repair procedure to replace the affected device.\n"
 #
 # code: SUN4-8000-4P
 # keys: fault.io.fire.pciex.device
@@ -98,13 +98,13 @@ msgstr "Fault"
 msgid "SUN4-8000-4P.severity"
 msgstr "Critical"
 msgid "SUN4-8000-4P.description"
-msgstr "\nA problem was detected in the PCI-Express subsystem.\n  Refer to %s for more information."
+msgstr "A problem was detected in the PCI-Express subsystem.\n  Refer to %s for more information."
 msgid "SUN4-8000-4P.response"
 msgstr "This fault does not have an automated response agent and thus requires interaction \nfrom the user and/or Sun Services."
 msgid "SUN4-8000-4P.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-4P.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below."
+msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below."
 #
 # code: SUN4-8000-5A
 # keys: defect.io.fire.pciex.driver
@@ -114,7 +114,7 @@ msgstr "Defect"
 msgid "SUN4-8000-5A.severity"
 msgstr "Critical"
 msgid "SUN4-8000-5A.description"
-msgstr "\nA problem was detected in the PCI-Express subsystem software.\n  Refer to %s for more information."
+msgstr "A problem was detected in the PCI-Express subsystem software.\n  Refer to %s for more information."
 msgid "SUN4-8000-5A.response"
 msgstr "This fault does not have an automated response agent and thus requires interaction \nfrom the user and/or Sun Services."
 msgid "SUN4-8000-5A.impact"
@@ -146,13 +146,13 @@ msgstr "Fault"
 msgid "SUN4-8000-75.severity"
 msgstr "Critical"
 msgid "SUN4-8000-75.description"
-msgstr "\nA problem was detected in the PCI-Express subsystem.\n  Refer to %s for more information."
+msgstr "A problem was detected in the PCI-Express subsystem.\n  Refer to %s for more information."
 msgid "SUN4-8000-75.response"
 msgstr "This fault does not have an automated response agent and thus requires interaction \nfrom the user and/or Sun Services."
 msgid "SUN4-8000-75.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-75.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
+msgstr "Schedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  If this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
 #
 # code: SUN4-8000-8E
 # keys: defect.io.fire.pci.driver defect.io.fire.pciex.driver
@@ -162,7 +162,7 @@ msgstr "Defect"
 msgid "SUN4-8000-8E.severity"
 msgstr "Critical"
 msgid "SUN4-8000-8E.description"
-msgstr "\nA problem was detected in the PCI-Express subsystem software.  Refer to %s for more information."
+msgstr "A problem was detected in the PCI-Express subsystem software.  Refer to %s for more information."
 msgid "SUN4-8000-8E.response"
 msgstr "This fault does not have an automated response agent and thus requires interaction \nfrom the user and/or Sun Services."
 msgid "SUN4-8000-8E.impact"
@@ -194,13 +194,13 @@ msgstr "Fault"
 msgid "SUN4-8000-A2.severity"
 msgstr "Critical"
 msgid "SUN4-8000-A2.description"
-msgstr "\nA problem was detected in the PCI subsystem.\n  Refer to %s for more information."
+msgstr "A problem was detected in the PCI subsystem.\n  Refer to %s for more information."
 msgid "SUN4-8000-A2.response"
 msgstr "This fault does not have an automated response agent and thus requires interaction \nfrom the user and/or Sun Services."
 msgid "SUN4-8000-A2.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-A2.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+msgstr "Schedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
 #
 # code: SUN4-8000-CX
 # keys: defect.io.fire.pciex.driver fault.io.datapath fault.io.fire.asic
@@ -232,7 +232,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-D4.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-D4.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
+msgstr "Schedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  If this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
 #
 # code: SUN4-8000-ER
 # keys: fault.io.fire.asic fault.io.fire.pci.device
@@ -248,7 +248,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-ER.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-ER.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
+msgstr "Schedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  If this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
 #
 # code: SUN4-8000-FC
 # keys: fault.io.fire.hbus
@@ -258,13 +258,13 @@ msgstr "Fault"
 msgid "SUN4-8000-FC.severity"
 msgstr "Major"
 msgid "SUN4-8000-FC.description"
-msgstr "\nA problem was detected in a system core bus.\n  Refer to %s for more information."
+msgstr "A problem was detected in a system core bus.\n  Refer to %s for more information."
 msgid "SUN4-8000-FC.response"
 msgstr "This fault does not have an automated response agent and thus requires interaction \nfrom the user and/or Sun Services."
 msgid "SUN4-8000-FC.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-FC.action"
-msgstr "\nUse fmdump -v -u EVENT_ID and fmdump -eV -u\nEVENT_ID to collect information to \nhelp Sun Service personnel identify the device in need of repair. Schedule \na repair procedure to replace the affected device.\n"
+msgstr "Use fmdump -v -u EVENT_ID and fmdump -eV -u\nEVENT_ID to collect information to \nhelp Sun Service personnel identify the device in need of repair. Schedule \na repair procedure to replace the affected device.\n"
 #
 # code: SUN4-8000-GQ
 # keys: fault.io.fire.datapath fault.io.fire.hbus
@@ -280,4 +280,68 @@ msgstr "One or more device instances may be disabled\n"
 msgid "SUN4-8000-GQ.impact"
 msgstr "Loss of services provided by the device\ninstances associated with this fault\n"
 msgid "SUN4-8000-GQ.action"
+msgstr "Schedule a repair procedure to replace the affected\ndevice if necessary, or contact Sun for support.\n"
+#
+# code: SUN4-8000-HD
+# keys: fault.io.fire.hb.sw-config
+#
+msgid "SUN4-8000-HD.type"
+msgstr "Fault"
+msgid "SUN4-8000-HD.severity"
+msgstr "Critical"
+msgid "SUN4-8000-HD.description"
+msgstr "The IO hostbridge's hostbus has been found to be configured improperly\nwhich is preventing the system from functioning properly.\n  Refer to %s for more information."
+msgid "SUN4-8000-HD.response"
+msgstr "One or more device instances may be disabled\n"
+msgid "SUN4-8000-HD.impact"
+msgstr "Loss of services provided by the device\ninstances associated with this fault\n"
+msgid "SUN4-8000-HD.action"
+msgstr "Schedule a repair procedure to replace the affected\ndevice if necessary, or contact Sun for support.\n"
+#
+# code: SUN4-8000-JH
+# keys: fault.io.fire.dmc.sw-algorithm
+#
+msgid "SUN4-8000-JH.type"
+msgstr "Fault"
+msgid "SUN4-8000-JH.severity"
+msgstr "Critical"
+msgid "SUN4-8000-JH.description"
+msgstr "An uncorrectable software problem was detected in the IO hostbridge's \nData Management Unit which is preventing the system from functioning properly.\n  Refer to %s for more information."
+msgid "SUN4-8000-JH.response"
+msgstr "One or more device instances may be disabled\n"
+msgid "SUN4-8000-JH.impact"
+msgstr "Loss of services provided by the device\ninstances associated with this fault\n"
+msgid "SUN4-8000-JH.action"
+msgstr "Schedule a repair procedure to replace the affected\ndevice if necessary, or contact Sun for support.\n"
+#
+# code: SUN4-8000-K3
+# keys: fault.io.fire.dmc.sw-state
+#
+msgid "SUN4-8000-K3.type"
+msgstr "Fault"
+msgid "SUN4-8000-K3.severity"
+msgstr "Critical"
+msgid "SUN4-8000-K3.description"
+msgstr "The IO hostbridge's Data Management Unit has been found to be in an illegal state\nwhich is preventing the system from functioning properly.\n  Refer to %s for more information."
+msgid "SUN4-8000-K3.response"
+msgstr "One or more device instances may be disabled\n"
+msgid "SUN4-8000-K3.impact"
+msgstr "Loss of services provided by the device\ninstances associated with this fault\n"
+msgid "SUN4-8000-K3.action"
+msgstr "Schedule a repair procedure to replace the affected\ndevice if necessary, or contact Sun for support.\n"
+#
+# code: SUN4-8000-LY
+# keys: fault.io.fire.pec.sw-algorithm
+#
+msgid "SUN4-8000-LY.type"
+msgstr "Fault"
+msgid "SUN4-8000-LY.severity"
+msgstr "Critical"
+msgid "SUN4-8000-LY.description"
+msgstr "An uncorrectable software problem was detected in the IO hostbridge's \nData Management Unit which is preventing the system from functioning properly.\n  Refer to %s for more information."
+msgid "SUN4-8000-LY.response"
+msgstr "One or more device instances may be disabled\n"
+msgid "SUN4-8000-LY.impact"
+msgstr "Loss of services provided by the device\ninstances associated with this fault\n"
+msgid "SUN4-8000-LY.action"
 msgstr "Schedule a repair procedure to replace the affected\ndevice if necessary, or contact Sun for support.\n"
