--- a/usr/src/cmd/fm/dicts/SUN4V.po
+++ b/usr/src/cmd/fm/dicts/SUN4V.po
@@ -601,3 +601,19 @@ msgid "SUN4V-8001-4C.impact"
 msgstr "Loss of services provided by the device\ninstances associated with this fault\n"
 msgid "SUN4V-8001-4C.action"
 msgstr "Schedule a repair procedure to replace the affected\ndevice if necessary, or contact Sun for support.\n"
+#
+# code: SUN4V-8001-5Q
+# keys: fault.io.fire.fw-epkt fault.io.fire.sw-epkt fault.io.fire.sw-fw-mismatch
+#
+msgid "SUN4V-8001-5Q.type"
+msgstr "Fault"
+msgid "SUN4V-8001-5Q.severity"
+msgstr "Critical"
+msgid "SUN4V-8001-5Q.description"
+msgstr "An uncorrectable problem was detected in the IO hostbridge in which a mismatch\nin the SW and FW prevents the error to be properly handled.\n  Refer to %s for more information."
+msgid "SUN4V-8001-5Q.response"
+msgstr "One or more device instances may be disabled\n"
+msgid "SUN4V-8001-5Q.impact"
+msgstr "Loss of services provided by the device\ninstances associated with this fault\n"
+msgid "SUN4V-8001-5Q.action"
+msgstr "Schedule a repair procedure to replace the affected\ndevice if necessary, or contact Sun for support.\n"
