6571122 lintdump should omit ".XXXfake" structure name tags 6575288 lintdump manpage nits

--- a/usr/src/tools/lintdump/lintdump.1
+++ b/usr/src/tools/lintdump/lintdump.1
@@ -18,9 +18,9 @@
 .\" "
 .\" " CDDL HEADER END
 .\" "
-.\" "Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+.\" "Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 .\" "Use is subject to license terms."
-.TH lintdump 1 "04 Jun 2006"
+.TH lintdump 1 "28 Jun 2007"
 .I lintdump
 \- dump the contents of one or more lint libraries
 .SH SYNOPSIS
@@ -93,9 +93,9 @@ Edition.  In particular, properties contained in the record that cannot be
 conveyed in C are displayed in angle brackets following definition or
 declaration; a full list of these and their meanings are given below in
 RECORD PROPERTIES.  In addition, note that some structures or unions may
-only be known by a numeric \fIID\fP, and thus output as "<struct tag
+only be known by a numeric \fIID\fP, and thus output as "struct <tag
 \fIID\fP>".  This ID can be used to pair the structure with its definition
-via structure records.  If -i is used, then "<struct anon>" is printed
+via structure records.  If -i is used, then "struct <anon>" is printed
 instead.
 .RE
 .LP
